[package]
name = "rustraft-local-cluster"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = { workspace = true }
color-eyre = { workspace = true }
console-subscriber = { workspace = true }
rand = { workspace = true }
rustraft-raft = { path = "../raft" }
tokio = { workspace = true, features = ["full", "tracing"] }

